refractor: oauth logic

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -5,11 +5,13 @@
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
 		/>
+		<title>CodilitySync Popup</title>
+		<script src="./popup.js" type="module"></script>
 	</head>
 	<body>
 		<div>
 			<h1>CodilitySync</h1>
-			<p>Sync your code from Codility to GitHub</p>
+			<p>Automatically sync your code from Codility to GitHub</p>
 		</div>
 		<br />
 		<div>
@@ -22,7 +24,5 @@
 				Authenticate
 			</button>
 		</div>
-		<script type="text/javascript" src="popup.js"></script>
-		<!-- <script type="text/javascript" src="oauth.js"></script> -->
 	</body>
 </html>
