--- a/popup/popup.html
+++ b/popup/popup.html
@@ -3,7 +3,7 @@
 		<link rel="stylesheet" href="popup.css" />
 		<link
 			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
 		/>
 		<title>CodilitySync Popup</title>
 		<script src="./popup.js" type="module"></script>
@@ -11,18 +11,31 @@
 	<body>
 		<div>
 			<h1>CodilitySync</h1>
-			<p>Automatically sync your code from Codility to GitHub</p>
+			<p>Sync your code from Codility to GitHub</p>
 		</div>
-		<br />
+		<hr />
 		<div>
-			<p>
-				<br />
-				Authenticate with GitHub to use CodilitySync
-			</p>
+			<p>Authenticate with GitHub to use CodilitySync</p>
 			<button id="authenticate">
-				<i class="fa fa-github"></i>
+				<i class="fa-brands fa-github"></i>
 				Authenticate
 			</button>
+		</div>
+		<div>
+			<a href="https://github.com/carminechoi/codilitysync" target="_blank"
+				><i class="fa-brands fa-github fa-lg" style="color: #575757"></i
+			></a>
+			<a href="https://linkedin.com/in/carminechoi" target="_blank"
+				><i class="fa-brands fa-linkedin fa-lg" style="color: #0072b1"></i
+			></a>
+			<a href="mailto:carmine.choi@gmail.com" target="_blank"
+				><i class="fa-solid fa-envelope fa-lg" style="color: red"></i
+			></a>
+			<a
+				href="chrome-extension://flkpbhfglpmahmemfpbkpnlnjndjopjo/welcome/welcome.html"
+				target="_blank"
+				><i class="fa-solid fa-globe fa-lg" style="color: gray"></i
+			></a>
 		</div>
 	</body>
 </html>
