--- a/setup/setup.html
+++ b/setup/setup.html
@@ -16,11 +16,18 @@
 				Before we continue, where where would you like to push your submissions?
 			</p>
 			<form id="welcomeForm">
-				<select id="repositorySelect" name="repositorySelect" required>
+				<select id="repoSelect" name="repoSelect" required>
 					<option value="" disabled selected>Select a repository</option>
 					<option value="new">Create a new repository</option>
 				</select>
-				<button type="submit">Link Repository</button>
+				<input
+					type="text"
+					id="repoInput"
+					name="repoInput"
+					placeholder="Enter repository name"
+					style="display: none"
+				/>
+				<button id="submitButton" type="submit">Link Repository</button>
 			</form>
 			<p class="caption">You can change this later</p>
 			<div id="captionContainer">
