feat: popup goes to setup if already authorized

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -42,7 +42,7 @@
 						><i class="fa-solid fa-globe fa-lg" style="color: #ffffff"></i
 					></a>
 				</div>
-				<div>
+				<div id="captionContainer">
 					<p class="caption">
 						Having Issues?
 						<a
