--- a/setup/setup.html
+++ b/setup/setup.html
@@ -12,9 +12,7 @@
 	<body>
 		<div class="container">
 			<h1>Link a repository</h1>
-			<p>
-				Before we continue, where where would you like to push your submissions?
-			</p>
+			<p>Before we continue, where would you like to push your submissions?</p>
 			<form id="welcomeForm">
 				<select id="repoSelect" name="repoSelect" required>
 					<option value="" disabled selected>Select a repository</option>
@@ -30,6 +28,22 @@
 				<button id="submitButton" type="submit">Link Repository</button>
 			</form>
 			<p class="caption">You can change this later</p>
+			<div id="iconsContainer">
+				<a href="https://github.com/carminechoi/codilitysync" target="_blank"
+					><i class="fa-brands fa-github fa-lg" style="color: #ffffff"></i
+				></a>
+				<a href="https://linkedin.com/in/carminechoi" target="_blank"
+					><i class="fa-brands fa-linkedin fa-lg" style="color: #0072b1"></i
+				></a>
+				<a href="mailto:carmine.choi@gmail.com" target="_blank"
+					><i class="fa-solid fa-envelope fa-lg" style="color: red"></i
+				></a>
+				<a
+					href="chrome-extension://flkpbhfglpmahmemfpbkpnlnjndjopjo/welcome/welcome.html"
+					target="_blank"
+					><i class="fa-solid fa-globe fa-lg" style="color: #ffffff"></i
+				></a>
+			</div>
 			<div id="captionContainer">
 				<p class="caption">
 					Having Issues?
