feat: add link repository logic

--- a/setup/setup.html
+++ b/setup/setup.html
@@ -13,7 +13,7 @@
 		<div class="container">
 			<h1>Link a repository</h1>
 			<p>Before we continue, where would you like to push your submissions?</p>
-			<form id="welcomeForm">
+			<form id="setupForm">
 				<select id="repoSelect" name="repoSelect" required>
 					<option value="" disabled selected>Select a repository</option>
 					<option value="new">Create a new repository</option>
