feat: add local svg icons for popup

--- a/pages/complete/complete.html
+++ b/pages/complete/complete.html
@@ -19,7 +19,9 @@
 		<hr />
 		<main>
 			<div id="middleContainer" class="container">
-				<a id="currentRepo" href="#" target="_blank">Link to Your Repository</a>
+				<a id="currentRepo" href="#" target="_blank"
+					>Link to Your Repository</a
+				>
 				<button id="changeBtn">
 					<i class="fas fa-pencil-alt"></i>
 					Change Repository
@@ -27,14 +29,27 @@
 			</div>
 			<div id="bottomContainer">
 				<div id="iconsContainer">
-					<a href="https://github.com/carminechoi/codilitysync" target="_blank"
-						><i class="fa-brands fa-github fa-lg" style="color: #ffffff"></i
+					<a
+						href="https://github.com/carminechoi/codilitysync"
+						target="_blank"
+						><i
+							class="fa-brands fa-github fa-lg"
+							style="color: #ffffff"
+						></i
 					></a>
-					<a href="https://linkedin.com/in/carminechoi" target="_blank"
-						><i class="fa-brands fa-linkedin fa-lg" style="color: #0072b1"></i
+					<a
+						href="https://linkedin.com/in/carminechoi"
+						target="_blank"
+						><i
+							class="fa-brands fa-linkedin fa-lg"
+							style="color: #0072b1"
+						></i
 					></a>
 					<a href="mailto:carmine.choi@gmail.com" target="_blank"
-						><i class="fa-solid fa-envelope fa-lg" style="color: red"></i
+						><i
+							class="fa-solid fa-envelope fa-lg"
+							style="color: red"
+						></i
 					></a>
 				</div>
 				<div id="captionContainer">
