--- a/pages/popup/popup.html
+++ b/pages/popup/popup.html
@@ -3,10 +3,6 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="popup.css" />
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-		/>
 		<title>CodilitySync Popup</title>
 	</head>
 	<body>
@@ -21,21 +17,29 @@
 			<div class="container">
 				<p>Authenticate with GitHub</p>
 				<button id="authenticate">
-					<i class="fa-brands fa-github"></i>
+					<img
+						src="../../images/icons/github-dark.svg"
+						id="buttonIcon"
+						class="icon"
+					/>
 					Authenticate
 				</button>
 			</div>
 			<div id="bottomContainer">
 				<div id="iconsContainer">
-					<a href="https://github.com/carminechoi/codilitysync" target="_blank"
-						><i class="fa-brands fa-github fa-lg" style="color: #ffffff"></i
-					></a>
-					<a href="https://linkedin.com/in/carminechoi" target="_blank"
-						><i class="fa-brands fa-linkedin fa-lg" style="color: #0072b1"></i
-					></a>
+					<a
+						href="https://github.com/carminechoi/codilitysync"
+						target="_blank"
+						><img src="../../images/icons/github-light.svg"
+					/></a>
+					<a
+						href="https://linkedin.com/in/carminechoi"
+						target="_blank"
+						><img src="../../images/icons/linkedin.svg"
+					/></a>
 					<a href="mailto:carmine.choi@gmail.com" target="_blank"
-						><i class="fa-solid fa-envelope fa-lg" style="color: red"></i
-					></a>
+						><img src="../../images/icons/email.svg"
+					/></a>
 				</div>
 				<div id="captionContainer">
 					<p class="caption">
