feat: add local svg icons for complete

--- a/pages/complete/complete.html
+++ b/pages/complete/complete.html
@@ -3,10 +3,6 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="complete.css" />
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-		/>
 		<title>CodilitySync Complete</title>
 	</head>
 	<body>
@@ -18,7 +14,7 @@
 		</header>
 		<hr />
 		<main>
-			<div id="middleContainer" class="container">
+			<div id="middleContainer">
 				<a id="currentRepo" href="#" target="_blank"
 					>Link to Your Repository</a
 				>
@@ -32,25 +28,16 @@
 					<a
 						href="https://github.com/carminechoi/codilitysync"
 						target="_blank"
-						><i
-							class="fa-brands fa-github fa-lg"
-							style="color: #ffffff"
-						></i
-					></a>
+						><img src="../../images/icons/github-light.svg"
+					/></a>
 					<a
 						href="https://linkedin.com/in/carminechoi"
 						target="_blank"
-						><i
-							class="fa-brands fa-linkedin fa-lg"
-							style="color: #0072b1"
-						></i
-					></a>
+						><img src="../../images/icons/linkedin.svg"
+					/></a>
 					<a href="mailto:carmine.choi@gmail.com" target="_blank"
-						><i
-							class="fa-solid fa-envelope fa-lg"
-							style="color: red"
-						></i
-					></a>
+						><img src="../../images/icons/email.svg"
+					/></a>
 				</div>
 				<div id="captionContainer">
 					<p class="caption">
