--- a/pages/setup/setup.html
+++ b/pages/setup/setup.html
@@ -3,10 +3,6 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="setup.css" />
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-		/>
 		<title>CodilitySync Setup</title>
 	</head>
 	<body>
@@ -15,7 +11,9 @@
 			<p>Where would you like to push your submissions?</p>
 			<form id="setupForm">
 				<select id="repoSelect" name="repoSelect" required>
-					<option value="" disabled selected>Select a repository</option>
+					<option value="" disabled selected>
+						Select a repository
+					</option>
 					<option value="new">Create a new repository</option>
 				</select>
 				<div id="newRepositoryForm" style="display: none">
@@ -26,11 +24,20 @@
 						placeholder="Enter repository name"
 					/>
 					<label class="radio-label">
-						<input type="radio" name="repositoryType" value="public" checked />
+						<input
+							type="radio"
+							name="repositoryType"
+							value="public"
+							checked
+						/>
 						Public
 					</label>
 					<label class="radio-label">
-						<input type="radio" name="repositoryType" value="private" />
+						<input
+							type="radio"
+							name="repositoryType"
+							value="private"
+						/>
 						Private
 					</label>
 				</div>
@@ -38,15 +45,17 @@
 			</form>
 			<p class="caption">You can change this later</p>
 			<div id="iconsContainer">
-				<a href="https://github.com/carminechoi/codilitysync" target="_blank"
-					><i class="fa-brands fa-github fa-lg" style="color: #ffffff"></i
-				></a>
+				<a
+					href="https://github.com/carminechoi/codilitysync"
+					target="_blank"
+					><img src="../../images/icons/github-light.svg"
+				/></a>
 				<a href="https://linkedin.com/in/carminechoi" target="_blank"
-					><i class="fa-brands fa-linkedin fa-lg" style="color: #0072b1"></i
-				></a>
+					><img src="../../images/icons/linkedin.svg"
+				/></a>
 				<a href="mailto:carmine.choi@gmail.com" target="_blank"
-					><i class="fa-solid fa-envelope fa-lg" style="color: red"></i
-				></a>
+					><img src="../../images/icons/email.svg"
+				/></a>
 			</div>
 			<div id="captionContainer">
 				<p class="caption">
@@ -59,7 +68,9 @@
 				</p>
 				<p class="caption">
 					Enjoying the tool? ⭐️
-					<a href="https://github.com/carminechoi/CodilitySync" target="_blank"
+					<a
+						href="https://github.com/carminechoi/CodilitySync"
+						target="_blank"
 						>Star us on GitHub</a
 					>!
 				</p>
