Carmine/review draft (#12)
* feat: remove unnecessary permission

* feat: add local svg icons for popup

* feat: add local svg icons for complete

* feat: add local svg icons for setup

--- a/pages/complete/complete.html
+++ b/pages/complete/complete.html
@@ -3,10 +3,6 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="complete.css" />
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-		/>
 		<title>CodilitySync Complete</title>
 	</head>
 	<body>
@@ -18,8 +14,10 @@
 		</header>
 		<hr />
 		<main>
-			<div id="middleContainer" class="container">
-				<a id="currentRepo" href="#" target="_blank">Link to Your Repository</a>
+			<div id="middleContainer">
+				<a id="currentRepo" href="#" target="_blank"
+					>Link to Your Repository</a
+				>
 				<button id="changeBtn">
 					<i class="fas fa-pencil-alt"></i>
 					Change Repository
@@ -27,15 +25,19 @@
 			</div>
 			<div id="bottomContainer">
 				<div id="iconsContainer">
-					<a href="https://github.com/carminechoi/codilitysync" target="_blank"
-						><i class="fa-brands fa-github fa-lg" style="color: #ffffff"></i
-					></a>
-					<a href="https://linkedin.com/in/carminechoi" target="_blank"
-						><i class="fa-brands fa-linkedin fa-lg" style="color: #0072b1"></i
-					></a>
+					<a
+						href="https://github.com/carminechoi/codilitysync"
+						target="_blank"
+						><img src="../../images/icons/github-light.svg"
+					/></a>
+					<a
+						href="https://linkedin.com/in/carminechoi"
+						target="_blank"
+						><img src="../../images/icons/linkedin.svg"
+					/></a>
 					<a href="mailto:carmine.choi@gmail.com" target="_blank"
-						><i class="fa-solid fa-envelope fa-lg" style="color: red"></i
-					></a>
+						><img src="../../images/icons/email.svg"
+					/></a>
 				</div>
 				<div id="captionContainer">
 					<p class="caption">
